FlightPath Changelog
====================

2012-03-24
  Still working on admin module.
  
  Can now add new degree plans.
  
  Implemented a new, more robust Form API system similar
  to Drupal.  You can have "required" fields, which
  automatically fail validation if no value is entered.
  
  Have a new "form_error" function which creates an error
  message for your form. 
  

2012-03-23
  Continuing work on admin module.
  
  Can actually save degrees now, and add/remove elective groups
  
  Fixed some minor tweaks to make sure it scrolled back to the correct position.
  
  Changed the way the "menu_links" array is set up in the menu items, to allow for
  more flexibility in the future.
  
  Invented a new hook.  hook_menu_handle_replacement_pattern ($st).  It will
  let you pass things like de_catalog_year=%DE_CATALOG_YEAR% to the l() function,
  which will then look for that hook to give each module the chance to act on that replacement
  pattern.
  

2012-03-18
  Continued work on admin module.
  
  Got much of the Edit Degrees displaying correctly.  At this point, have not yet wired
  it up so that you can submit changes to degree plans.


2012-03-16
  Beginning work on the Admin module today.  I expect it to be huge and complicated.
 
  Urgent message Save/Load
 
  Created simple Form API similar to Drupal (but much simpler)
 
  Created a concept of a system_settings_form which automatically writes values to the variables
  table upon save, so you don't have to create your own submit handler for forms.  Ideal for little
  one-form settings pages.
 
  New "page_setting" for menu items: menu_links.  Provides a way to place "breadcrumbs" and other
  types of links at the top of the page automatically.
 

2012-03-15
  Finished up (mostly) Comments module.
  
  Did work on getting access callback system working with permissions.  


2012-03-12
  Got switching between Year view and Type view working.
