@@ -13,3 +13,8 @@
   font-style: italic;
   color: #999;
 }
+
+.admin-degrees-upper-links {
+  font-size: 0.8em;
+  margin-bottom: 5px;
+}
