@@ -10,8 +10,14 @@ FlightPath Changelog
   to Drupal.  You can have "required" fields, which
   automatically fail validation if no value is entered.
   
+  Automatically looks for a callback_submit() function to submit to; no need
+  to register a new menu hook.
+  
   Have a new "form_error" function which creates an error
   message for your form. 
+  
+  Can now "copy" a degree plan.  I believe this basically completes the degrees portion
+  of the admin section.
   
 
 2012-03-23
